[package]
name = "rust-sleep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
chrono = { version = "0", default-features = false, features = ["clock"] }
fern = "0"